# rospace-core

./: .codecov.yml  .coveragerc  .gitignore  .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  package.xml  readme.md  setup.py
epoch_clock/: CMakeLists.txt  package.xml  setup.py
epoch_clock/launch/: run_clock.launch
epoch_clock/scripts/: epoch_clock.py
epoch_clock/src/epoch_clock/: SimTimeClock.py  SimTimeHandler.py  SimTimeService.py  epoch.py
nodes/cso_gnc_target_estimator/: CMakeLists.txt  hans.ipynb  package.xml
nodes/cso_gnc_target_estimator/launch/: filter_bag.launch
nodes/cso_gnc_target_estimator/src/: BaseRelativeOrbitalFilter.py  RelativeOrbitalSTM.py  UKFRelativeOrbitalFilter.py  cso_gnc_target_estimator_node.py  cso_gnc_target_estimator_node2.py  state_visualizer.py
nodes/cso_gnc_target_estimator/test/: test_BaseRelativeOrbitalFilter.py
nodes/space_sim_radar/: CMakeLists.txt  package.xml
nodes/space_sim_radar/src/: sim_radar_node.py
nodes/space_vision/: CMakeLists.txt  package.xml
nodes/space_vision/res/: result_analysis.py
nodes/space_vision/src/: __init__.py  result_analysis.py  space_vision.py
nodes/space_vision/src/vision_algo/: __init__.py  hist_eq.py  vision_lib.py
rospace_lib/: CMakeLists.txt  package.xml  setup.py
rospace_lib/doc/: sunsensor.dig  sunsensor_sdev.dig
rospace_lib/doc/sunsensor/: .directory  sunsensor.csv  sunsensor.dig  sunsensor_sdev.csv  sunsensor_sdev.dig
rospace_lib/src/rospace_lib/: BaseState.py  Cartesian.py  Constants.py  KepOrbElem.py  QNSRelOrbElements.py  __init__.py
rospace_lib/src/rospace_lib/actuators/: DipoleModel.py  MagnetoTorquers.py  Magnetorquers.py  __init__.py
rospace_lib/src/rospace_lib/clock/: SimTimeClock.py  SimTimePublisher.py  SimTimeService.py  SimTimeUpdater.py  __init__.py  epoch.py
rospace_lib/src/rospace_lib/misc/: FileDataHandler.py  PropagatorParser.py  QuickPropagator.py  Spacecrafts.py  __init__.py
rospace_lib/src/rospace_lib/propagator/: Propagator.py  __init__.py
rospace_lib/src/rospace_lib/sensor/: ADXRS614.py  DTUMOEMSS.py  TestSensor.py  __init__.py
rospace_lib/src/rospace_lib/swisscube/: BDotController.py  __init__.py
rospace_lib/test/: rostest_SimTimeClock.py  rostest_SimTimePublisher.py  testSimTime.test  test_ADXRS614.py  test_DTUMOEMSS.py  test_DipoleModel.py  test_KepOrbElem.py  test_MagnetoTorquers.py  test_Magnetorquers.py  test_RelativeOrbitalElements.py  test_SimTimeClock.py
rospace_nodes/rospace_flightsoftware/: CMakeLists.txt  package.xml
rospace_nodes/rospace_flightsoftware/launch/: flight_software.launch
rospace_nodes/rospace_flightsoftware/src/: FlightSoftwareNode.py  flightsoftware_node.py
rospace_nodes/rospace_flightsoftware/test/: launch_FlightSoftwareNode_integration.test  rostest_FlightSoftwareNode.py
rospace_nodes/rospace_imu/: CMakeLists.txt  package.xml  setup.py
rospace_nodes/rospace_imu/launch/: imu.launch
rospace_nodes/rospace_imu/src/: ADXRS614.py  IMUnode.py  imu_node.py  rospy
rospace_nodes/rospace_imu/src/rospace_imu/: IMUnode.py  __init__.py
rospace_nodes/rospace_imu/test/: launch_IMUnode.test  launch_IMUnode_integration.test  rostest_IMUnode.py
rospace_nodes/rospace_propagator/: CMakeLists.txt  package.xml  setup.py
rospace_nodes/rospace_propagator/launch/: absolute_orbit.launch  csswe_orbit.launch  dove_orbit.launch  envisat_orbit.launch  propagator.launch  relative_orbit.launch  transit_orbit.launch
rospace_nodes/rospace_propagator/src/propagator/: AttitudePropagation.py  DipoleModel.py  DisturbanceTorques.py  FileDataHandler.py  OrekitPropagator.py  (+8 more)
rospace_nodes/rospace_propagator/test/: test_DipoleModel.py  test_MagneticTorque.py  test_OrekitPropagator.py  test_SatelliteDiscretization.py
rospace_orekit/: CMakeLists.txt  package.xml
rospace_plugins/rqt_simtime_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rospace_plugins/rqt_simtime_plugin/resource/: rqt_simtime.ui
rospace_plugins/rqt_simtime_plugin/scripts/: rqt_simtime_plugin
rospace_plugins/rqt_simtime_plugin/test/: simtime_plugin.test  test_simtime_plugin_widget.py
rospace_simulator/: CMakeLists.txt  package.xml
rospace_simulator/cfg/: chaser_2body.yaml  csswe.yaml  dove3.yaml  dzhanibekov.yaml  envisat.yaml  flock1c.yaml  swisscube.yaml  target.yaml  target_2body.yaml  testcraft.yaml  transit.yaml
rospace_simulator/cfg/Scenarios/: CSO_mission.yaml  dzhanibekov.yaml  swisscube_mission.yaml  test_mission.yaml
rospace_simulator/cfg/Spacecrafts/: T_handle.yaml  csswe.yaml  envisat.yaml  planning_chaser.yaml  planning_target.yaml  swisscube.yaml  target.yaml  testcraft.yaml  transit.yaml
rospace_simulator/launch/: cso_base.launch  cubesat.launch  cubesat2.launch  dzhanibekov.launch  record_bag.launch  scenario_visualized.launch  simulator.launch  tf_publisher.launch  tf_publisher_absolute.launch  visualizer_time_gui.launch
rospace_simulator/launch/Experiments/: AON_FAR.launch  ARN_CLOSE.launch
rospace_simulator/launch/Missions/: envisat_mission.launch  swisscube_mission.launch  test_mission.launch
rospace_simulator/launch/Scenarios/: dzhanibekov.launch  envisat_mission.launch  swisscube_mission.launch  test_mission.launch
rospace_simulator/launch/Spacecrafts/: T_handle.launch  envisat.launch  swisscube.launch  target.launch  testcraft.launch
rospace_simulator/res/meshes/: ENVISAT.stl  dzhanibekov.fcstd  dzhanibekov.stl  dzhanibekov.txt  earth.DAE
rospace_simulator/res/models/: dzhanibekov.fcstd1  simple_cso.fcstd  world.urdf  world_cubesat.urdf
rospace_simulator/res/rviz/: cso_centered.rviz  dzhanibekov.rviz  envisat_mission.rviz  swisscube.rviz  tf_large.rviz
rospace_simulator/res/urdf/: common.xacro  materials.urdf.xacro  planet.urdf.xacro  spacecraft.urdf.xacro  spacecrafts.urdf.xacro
rospace_simulator/res/worlds/: CSO_mission.urdf.xacro  world.urdf  world_dzhanibekov.urdf  world_dzhanibekov.urdf.xacro  world_envisat_mission.urdf.xacro  world_swisscube_mission.urdf.xacro  world_two.urdf
rospace_simulator/src/: satelite_tf_publisher.py  satellite_tf_publisher.py
(+219 files in other folders)
