<?xml version="1.0"?>
<package format="2">
  <name>space_sim_radar</name>
  <version>0.0.0</version>
  <description>
	    Node that simulates a Radar on a spacecraft
  </description>

  <maintainer email="michael.pantic@epfl.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>space_msgs</depend>
  <depend>space_tf</depend>
  <depend>space_sensor_model</depend>


</package>
