<?xml version="1.0"?>
<package format="2">
  <name>space_vision</name>
  <version>0.0.0</version>
  <description>
	    Node that simulates a vision system on a spacecraft. Receives images and outputs target's relative position
  </description>

  <maintainer email="gaetan.ramet@epfl.ch">Gaetan Ramet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>space_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
