<?xml version="1.0"?>
<package format="2">
  <name>rospace_flightsoftware</name>
  <version>0.1.0</version>
  <description>
	   Flightsoftware Test Node
  </description>

  <maintainer email="michael.pantic@gmail.com">Michael Pantic</maintainer>
  <maintainer email="lanegger.christian@gmail.com">Christian Lanegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>rostest</build_depend>

  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospace_lib</depend>
  <depend>rospace_msgs</depend>

</package>
