<?xml version="1.0"?>
<package format="2">
  <name>rospace_propagator</name>
  <version>0.1.0</version>
  <description>
	   Propagation Node based on orekit
  </description>

  <maintainer email="lanegger.christian@gmail.com">Christian Lanegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>

  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>rospace_lib</depend>
  <depend>rospace_msgs</depend>
  <depend>epoch_clock</depend>

</package>
