<?xml version="1.0"?>
<package>
  <name>rqt_simtime_plugin</name>
  <version>0.0.0</version>
  <description>rqt_simtime_plugin provides a time GUI plugin to handle simulation time.</description>
  <maintainer email="lanegger.christian@gmail.com"> Christian Lanegger </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>rostest</build_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
